старт.добавляет команду

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         </div>
       </section>
       <!--Чем мы занимаемся-->
-<!--<section class="section">
+<section class="section servises">
         <div class="container">
           <h2 class="title">Чем мы занимаемся</h2>
           <ul class="expert">
@@ -147,9 +147,9 @@
             </li>
           </ul>
         </div>
-      </section>-->
+      </section>
       <!--Наша команда-->
-<!--<section class="section color">
+<section class="section color">
         <div class="container">
           <h2 class="title">Наша команда</h2>
           <ul class="komand-list">
@@ -295,7 +295,7 @@
             </li>
           </ul>
         </div>
-      </section>-->
+      </section>
       <!--Постоянные клиенты-->
   <!--<section class="section">
         <div class="container">
