Добавляет моби.планшет.дестоп

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
         </div>
       </section>
       <!--Чем мы занимаемся-->
-<section class="section servises">
+    <section class="section servises">
         <div class="container">
           <h2 class="title">Чем мы занимаемся</h2>
           <ul class="expert">
@@ -151,19 +151,19 @@
         </div>
       </section>
       <!--Наша команда-->
-<section class="section color">
+   <section class="section color">
         <div class="container">
           <h2 class="title">Наша команда</h2>
           <ul class="komand-list">
             <li class="komand-list-item">
-              <picture class="komand-list-item-img">
+              <picture>
                 <source srcset="./images/destop/img-dest4.jpg 1x, ./images/destop/img@2x-dest4.jpg 2x"
                  media="(min-width:1200px)">
                 <source srcset="./images/tablet/img-tabl1.jpg 1x, ./images/tablet/img@2x-tabl1.jpg 2x"
                  media="(min-width:768px)">
                 <source srcset="./images/mobile/img-mobi1.jpg 1x, ./images/mobile/img@2x-mobi1.jpg 2x"
                  media="(max-width:767px)">
-                <img src="./images/mobile/img-mobi1.jpg" alt="Игорь Демьяненко"  class="komand-list-item-img"/>
+                <img src="./images/mobile/img-mobi1.jpg" alt="Игорь Демьяненко" class="komand-list-item-img"/>
               </picture>
               <h3 class="title-name">Игорь Демьяненко</h3>
               <p class="title-desc-list" lang="en">Product Designer</p>
@@ -199,11 +199,11 @@
               </ul>
             </li>
             <li class="komand-list-item">
-              <picture class="komand-list-item-img">
+              <picture>
                 <source srcset="./images/destop/img-dest5.jpg 1x, ./images/destop/img@2x-dest5.jpg 2x" media="(min-width:1200px)">
                 <source srcset="./images/tablet/img-tabl2.jpg 1x, ./images/tablet/img@2x-tabl2.jpg 2x" media="(min-width:768px)">
                 <source srcset="./images/mobile/img-mobi2.jpg 1x, ./images/mobile/img@2x-mobi2.jpg 2x" media="(max-width:767px)">
-                <img src="./images/mobile/img-mobi2.jpg" alt="Ольга Репина"/>
+                <img src="./images/mobile/img-mobi2.jpg" alt="Ольга Репина" class="komand-list-item-img"/>
               </picture>
               <h3 class="title-name">Ольга Репина</h3>
               <p class="title-desc-list" lang="en">Frontend Developer</p>
@@ -239,11 +239,11 @@
               </ul>
             </li>
             <li class="komand-list-item">
-              <picture class="komand-list-item-img">
+              <picture>
                 <source srcset="./images/destop/img-dest6.jpg 1x, ./images/destop/img@2x-dest6.jpg 2x" media="(min-width:1200px)">
                 <source srcset="./images/tablet/img-tabl3.jpg 1x, ./images/tablet/img@2x-tabl3.jpg 2x" media="(min-width:768px)">
                 <source srcset="./images/mobile/img-mobi3.jpg 1x, ./images/mobile/img@2x-mobi3.jpg 2x" media="(max-width:767px)">
-              <img src="./images/mobile/img-mobi3.jpg" alt="Николай Тарасов" />
+              <img src="./images/mobile/img-mobi3.jpg" alt="Николай Тарасов" class="komand-list-item-img"/>
                 </picture>
               <h3 class="title-name">Николай Тарасов</h3>
               <p class="title-desc-list" lang="en">Marketing</p>
@@ -279,11 +279,11 @@
               </ul>
             </li>
             <li class="komand-list-item">
-              <picture class="komand-list-item-img">
+              <picture>
                 <source srcset="./images/destop/img-dest7.jpg 1x, ./images/destop/img@2x-dest7.jpg 2x" media="(min-width:1200px)">
                 <source srcset="./images/tablet/img-tabl4.jpg 1x, ./images/tablet/img@2x-tabl4.jpg 2x" media="(min-width:768px)">
                 <source srcset="./images/mobile/img-mobi4.jpg 1x, ./images/mobile/img@2x-mobi4.jpg 2x" media="(max-width:767px)">
-                <img src="./images/mobile/img-mobi4.jpg" alt="Михаил Ермаков" />
+                <img src="./images/mobile/img-mobi4.jpg" alt="Михаил Ермаков" class="komand-list-item-img"/>
               </picture>
               <h3 class="title-name">Михаил Ермаков</h3>
               <p class="title-desc-list" lang="en">UI Designer</p>
@@ -322,7 +322,7 @@
         </div>
       </section>
       <!--Постоянные клиенты-->
-  <!--<section class="section">
+    <section class="section">
         <div class="container">
           <h2 class="title">Постоянные клиенты</h2>
           <ul class="client">
@@ -370,9 +370,9 @@
             </li>
           </ul>
         </div>
-      </section>-->
-</main>
-<!--<footer class="footer">
+   </section>
+  </main>
+ <footer class="footer">
       <div class="container footer-nav">
         <div class="footer-wrapper">
           <div class="footer-logo">
@@ -438,8 +438,8 @@
           </form>
         </div>
       </div>
-    </footer>-->
- <!--<div class="backdrop is-hidden" data-modal>
+  </footer>
+    <div class="backdrop is-hidden" data-modal>
         <form action="#" class="contact-form">
           <h2 class="form-title">Оставьте свои данные, мы вам перезвоним</h2>
           <button data-modal-close type="button" class="modal-close-btn">
@@ -447,6 +447,7 @@
               <use href="./images/sprite.svg#close"></use>
             </svg>
           </button>
+        
           <div class="form-fieid">
             <input type="text" name="name" id="user-name" class="form-input" placeholder=" " required>
             <label for="user-name" class="form-label">Имя</label>
@@ -483,7 +484,7 @@
           </label>
           <button type="submit" class="modal-form-button">Отправить</button>
         </form>
-    </div>-->
+    </div>
     <script src="./js/menu.js"></script>
     <script src="./js/modal.js"></script>
   </body>
