--- a/portfolio.html
+++ b/portfolio.html
@@ -9,47 +9,56 @@
   </head>
 
   <body>
-    <header class="header portfolio">
-      <div class="container main-nav">
-        <nav class="navigation">
-          <a class="logo-1" href="./index.html" lang="en"><span class="web">Web</span> Studio</a>
-          <!-- Ссылки на другие страницы или разделы текущей -->
-          <ul class="navigation-list">
-            <li class="navigation-list-item">
-              <a class="navigation-list-link" href="./index.html">Студия</a>
-            </li>
-            <li class="navigation-list-item">
-              <a class="navigation-list-link hidden" href="./portfolio.html" target="_blank">Портфолио</a>
-            </li>
-            <li class="navigation-list-item">
-              <a class="navigation-list-link" href="./contact">Контакты</a>
-            </li>
-          </ul>
-        </nav>
-        <ul class="auth-nav">
-          <li class="address-list">
-            <address class="address-list-mail">
-              <a class="address-mail" href="mailto:info@devstudio.com" lang="en">
-                <!--<span><img class="address-icon" src="./images/cmc.svg" alt="cmc"></span>-->
-                <svg class="address-icon" width="21" height="17">
-                  <use href="./images/sprite.svg#icon-cmc">
-                  </use>
-                </svg>info@devstudio.com</a>
-            </address>
-          </li>
-          <li class="address-list">
-            <address class="address-list-tel">
-              <a class="address-tel" href="tel:+38096111111">
-                <!--<span><img class="address-icon" src="./images/tel.svg" alt="tel"></span>-->
-                <svg class="address-icon" width="15" height="20">
-                  <use href="./images/sprite.svg#icon-tel">
-                  </use>
-                </svg>+38 096 111 11 11</a>
-            </address>
-          </li>
-        </ul>
-      </div>
-    </header>
+      <header class="header portfolio">
+        <div class="container main-nav">
+          <a class="logo-1" href="./index.html" lang="en"><span class="web">Web</span>Studio</a>
+          <button type="button" class="menu-button" aria-expanded="false" aria-controls="menu-wrapper" data-menu-button>
+            <svg width="40" height="40" aria-label="Переключатель мобильного меню">
+              <use class="icon-cross" href="./images/sprite.svg#cross"></use>
+              <use class="icon-menu" href="./images/sprite.svg#menu"></use>
+            </svg>
+          </button>
+          <div class="menu-wrapper" data-menu>
+            <nav class="navigation">
+              <!-- Ссылки на другие страницы-->
+              <ul class="navigation-list">
+                <li class="navigation-list-item">
+                  <a class="navigation-list-link" href="./index.html">Студия</a>
+                </li>
+                <li class="navigation-list-item">
+                  <!--target="_blank"-->
+                  <a class="navigation-list-link hidden" href="./portfolio.html">Портфолио</a>
+                </li>
+                <li class="navigation-list-item">
+                  <a class="navigation-list-link" href="./contact">Контакты</a>
+                </li>
+              </ul>
+            </nav>
+            <div class="auth-nav-adress">
+              <ul class="auth-nav">
+                <li class="address-list">
+                  <address class="address-list-mail">
+                    <a class="address-mail" href="mailto:info@devstudio.com" lang="en">
+                      <!--<span><img class="address-icon" src="./images/cmc.svg" alt="cmc"></span>-->
+                      <svg class="address-icon" width="19" height="15">
+                        <use href="./images/sprite.svg#icon-cmc"></use>
+                      </svg>info@devstudio.com</a>
+                  </address>
+                </li>
+                <li class="address-list">
+                  <address class="address-list-tel">
+                    <a class="address-tel" href="tel:+38096111111">
+                      <!--<span><img class="address-icon" src="./images/tel.svg" alt="tel"></span>-->
+                      <svg class="address-icon" width="14" height="20">
+                        <use href="./images/sprite.svg#icon-tel"></use>
+                      </svg>+38 096 111 11 11</a>
+                  </address>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </header>
     <main class="portfolio-main">
       <div class="container">
         <h1 hidden>примеры работ</h1>
@@ -71,12 +80,17 @@
           </li>
         </ul>
     </div>
-    <div class="container">  
+ <div class="container"> 
       <ul class="portfolio-link">
         <li class="portfolio-item">
-         <a href="/"  class="portfolio-a">
+         <a href="/" class="portfolio-a">
           <div class="overlay-img">
-            <img class="portfolio-link-list" src="./images/img.9.png" alt="Веб-сайты"/>
+            <picture>
+            <source srcset="./images/destop/img-dest8.jpg 1x, ./images/destop/img@2x-dest8.jpg 2x" media="(min-width:1200px)">
+            <source srcset="./images/tablet/img-tabl5.jpg 1x, ./images/tablet/img@2x-tabl5.jpg 2x" media="(min-width:768px)">
+            <source srcset="./images/mobile/img-mobi5.jpg 1x, ./images/mobile/img@2x-mobi5.jpg 2x" media="(max-width:767px)">
+            <img class="portfolio-link-list" src="./images/img-mobi5.jpg" alt="Веб-сайты"/>
+            </picture>
             <div class="overlay">
               <p class="description">Технокряк это современная площадка распространения коронавируса. Компании используют эту
                 платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
@@ -89,7 +103,12 @@
         <li class="portfolio-item">
           <a href="/" class="portfolio-a">
             <div class="overlay-img">
-            <img class="portfolio-link-list" src="./images/img.1.png" alt="Баскетбол"/>
+              <picture>
+                <source srcset="./images/destop/img-dest9.jpg 1x, ./images/destop/img@2x-dest9.jpg 2x" media="(min-width:1200px)">
+                <source srcset="./images/tablet/img-tabl6.jpg 1x, ./images/tablet/img@2x-tabl6.jpg 2x" media="(min-width:768px)">
+                <source srcset="./images/mobile/img-mobi6.jpg 1x, ./images/mobile/img@2x-mobi6.jpg 2x" media="(max-width:767px)">
+                <img class="portfolio-link-list" src="./images/img-mobi6.jpg " alt="Баскетбол"/>
+              </picture>
             <div class="overlay">
                <p class="description">Технокряк это современная площадка распространения коронавируса. Компании используют эту
                 платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
@@ -102,7 +121,12 @@
         <li class="portfolio-item">
           <a href="/" class="portfolio-a">
             <div class="overlay-img">
-             <img class="portfolio-link-list" src="./images/img.2.png" alt="Рыба"/>
+              <picture>
+                <source srcset="./images/destop/img-dest10.jpg 1x, ./images/destop/img@2x-dest10.jpg 2x" media="(min-width:1200px)">
+                <source srcset="./images/tablet/img-tabl7.jpg 1x, ./images/tablet/img@2x-tabl7.jpg 2x" media="(min-width:768px)">
+                <source srcset="./images/mobile/img-mobi7.jpg 1x, ./images/mobile/img@2x-mobi7.jpg 2x" media="(max-width:767px)">
+               <img class="portfolio-link-list" src="./images/img-mobi7.jpg" alt="Рыба"/>
+              </picture>
              <div class="overlay">
                <p class="description">Технокряк это современная площадка распространения коронавируса. Компании используют эту
                 платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
@@ -115,7 +139,12 @@
         <li class="portfolio-item">
           <a href="/" class="portfolio-a">
            <div class="overlay-img">
-            <img class="portfolio-link-list" src="./images/img.3.png" alt="Наушники"/>
+            <picture>
+              <source srcset="./images/destop/img-dest11.jpg 1x, ./images/destop/img@2x-dest11.jpg 2x" media="(min-width:1200px)">
+              <source srcset="./images/tablet/img-tabl8.jpg 1x, ./images/tablet/img@2x-tabl8.jpg 2x" media="(min-width:768px)">
+              <source srcset="./images/mobile/img-mobi8.jpg 1x, ./images/mobile/img@2x-mobi8.jpg 2x" media="(max-width:767px)">
+             <img class="portfolio-link-list" src="./images/img-mobi8.jpg" alt="Наушники"/>
+            </picture>
             <div class="overlay">
                <p class="description">Технокряк это современная площадка распространения коронавируса. Компании используют эту
                 платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
@@ -128,8 +157,13 @@
         <li class="portfolio-item">
           <a href="/" class="portfolio-a">
             <div class="overlay-img">
-              <img class="portfolio-link-list" src="./images/img.4.png" alt="Коробки"/>
-             <div class="overlay">
+              <picture>
+                <source srcset="./images/destop/img-dest12.jpg 1x, ./images/destop/img@2x-dest12.jpg 2x" media="(min-width:1200px)">
+                <source srcset="./images/tablet/img-tabl9.jpg 1x, ./images/tablet/img@2x-tabl9.jpg 2x" media="(min-width:768px)">
+                <source srcset="./images/mobile/img-mobi9.jpg 1x, ./images/mobile/img@2x-mobi9.jpg 2x" media="(max-width:767px)">
+               <img class="portfolio-link-list" src="./images/img-mobi9.jpg" alt="Коробки"/>
+              </picture>
+              <div class="overlay">
                <p class="description">Технокряк это современная площадка распространения коронавируса. Компании используют эту
                 платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
              </div>
@@ -141,7 +175,12 @@
         <li class="portfolio-item">
           <a href="/" class="portfolio-a">
             <div class="overlay-img">
-             <img class="portfolio-link-list" src="./images/img.5.png" alt=""/>
+              <picture>
+                <source srcset="./images/destop/img-dest13.jpg 1x, ./images/destop/img@2x-dest13.jpg 2x" media="(min-width:1200px)">
+                <source srcset="./images/tablet/img-tabl10.jpg 1x, ./images/tablet/img@2x-tabl10.jpg 2x" media="(min-width:768px)">
+                <source srcset="./images/mobile/img-mobi10.jpg 1x, ./images/mobile/img@2x-mobi10.jpg 2x" media="(max-width:767px)">
+               <img class="portfolio-link-list" src="./images/img-mobi10.jpg" alt=""/>
+              </picture>
              <div class="overlay">
                <p class="description">Технокряк это современная площадка распространения коронавируса. Компании используют эту
                 платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
@@ -154,7 +193,12 @@
         <li class="portfolio-item">
           <a href="/" class="portfolio-a">
            <div class="overlay-img">
-            <img class="portfolio-link-list" src="./images/img.6.png" alt="Книги"/>
+            <picture>
+              <source srcset="./images/destop/img-dest14.jpg 1x, ./images/destop/img@2x-dest14.jpg 2x" media="(min-width:1200px)">
+              <source srcset="./images/tablet/img-tabl11.jpg 1x, ./images/tablet/img@2x-tabl11.jpg 2x" media="(min-width:768px)">
+              <source srcset="./images/mobile/img-mobi11.jpg 1x, ./images/mobile/img@2x-mobi11.jpg 2x" media="(max-width:767px)">
+             <img class="portfolio-link-list" src="./images/img-mobi11.jpg" alt="Книги"/>
+            </picture> 
              <div class="overlay">
                <p class="description">Технокряк это современная площадка распространения коронавируса. Компании используют эту
                 платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
@@ -167,8 +211,13 @@
         <li class="portfolio-item">
           <a href="/" class="portfolio-a">
             <div class="overlay-img">
-             <img class="portfolio-link-list" src="./images/img.7.png" alt=""/>
-             <div class="overlay">
+              <picture>
+                <source srcset="./images/destop/img-dest15.jpg 1x, ./images/destop/img@2x-dest15.jpg 2x" media="(min-width:1200px)">
+                <source srcset="./images/tablet/img-tabl12.jpg 1x, ./images/tablet/img@2x-tabl12.jpg 2x" media="(min-width:768px)">
+                <source srcset="./images/mobile/img-mobi12.jpg 1x, ./images/mobile/img@2x-mobi12.jpg 2x" media="(max-width:767px)">
+               <img class="portfolio-link-list" src="./images/img-mobi12.jpg" alt=""/>
+              </picture>
+              <div class="overlay">
                <p class="description">Технокряк это современная площадка распространения коронавируса. Компании используют эту
                 платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
              </div>
@@ -180,8 +229,13 @@
         <li class="portfolio-item">
           <a href="/" class="portfolio-a">
             <div class="overlay-img">
-              <img class="portfolio-link-list" src="./images/img.8.png" alt="Веб-сайты"/>
-             <div class="overlay">
+              <picture>
+                <source srcset="./images/destop/img-dest16.jpg 1x, ./images/destop/img@2x-dest16.jpg 2x" media="(min-width:1200px)">
+                <source srcset="./images/tablet/img-tabl13.jpg 1x, ./images/tablet/img@2x-tabl13.jpg 2x" media="(min-width:768px)">
+                <source srcset="./images/mobile/img-mobi13.jpg 1x, ./images/mobile/img@2x-mobi13.jpg 2x" media="(max-width:767px)">
+               <img class="portfolio-link-list" src="./images/img-mobi13.jpg" alt="Веб-сайты"/>
+              </picture>
+              <div class="overlay">
                <p class="description">Технокряк это современная площадка распространения коронавируса. Компании используют эту
                 платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
              </div>
@@ -265,5 +319,6 @@
         </div>
       </div>
     </footer>
+  <script src="./js/menu.js"></script>
  </body>
 </html>
