--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
               </a>
             </li>
             <li class="link">
-              <a href="#" class="social-link-item footer-a" aria-label="иконка ликедин">
+              <a href="https://www.linkedin.com/in/oksana-cherry/" class="social-link-item footer-a" aria-label="иконка ликедин">
                 <svg class="social-link-svg footer-svg">
                   <use href="./images/sprite.svg#icon-linkedin"></use>
                 </svg>
@@ -432,7 +432,7 @@
         </div>
         <div class="aside">
           <b class="aside-caption">Подпишитесь на рассылку</b>
-          <form action="#" class="footer-form">
+          <form action="https://t.me/oksacherry" class="footer-form">
             <input type="email" class="footer-form-email" name="email" placeholder="E-mail">
            <button type="submit" class="button-icon-cmc">Подписаться</button>
           </form>
