--- a/index.html
+++ b/index.html
@@ -38,20 +38,20 @@
         <ul class="auth-nav">
           <li class="address-list">
             <address class="address-list-mail">
-              <a class="address-mail" href="mailto:info@devstudio.com" lang="en">
+              <a class="address-mail" href="mailto:oksa-lera@ukr.net" lang="en">
                 <!--<span><img class="address-icon" src="./images/cmc.svg" alt="cmc"></span>-->
                 <svg class="address-icon" width="19" height="15">
                   <use href="./images/sprite.svg#icon-cmc"></use>
-                </svg>info@devstudio.com</a>
+                </svg>oksa-lera@ukr.net</a>
             </address>
           </li>
           <li class="address-list">
             <address class="address-list-tel">
-              <a class="address-tel" href="tel:+38096111111">
+              <a class="address-tel" href="tel:+380669391487">
                 <!--<span><img class="address-icon" src="./images/tel.svg" alt="tel"></span>-->
                 <svg class="address-icon" width="14" height="20">
                   <use href="./images/sprite.svg#icon-tel"></use>
-                </svg>+38 096 111 11 11</a>
+                </svg>+38 066 939 14 87</a>
             </address>
           </li>
         </ul>
